[gd_scene load_steps=6 format=1]

[ext_resource path="res://assets/space.png" type="Texture" id=1]
[ext_resource path="res://scripts/ background.gd" type="Script" id=2]
[ext_resource path="res://assets/4.png" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://scripts/button.gd" type="Script" id=5]

[node name="background" type="ParallaxBackground"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="."]

transform/pos = Vector2( -1280, 0 )
motion/scale = Vector2( 0.5, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxLayer"]

texture = ExtResource( 1 )
centered = false

[node name="foreground" type="ParallaxLayer" parent="."]

transform/pos = Vector2( -1280, 0 )
motion/scale = Vector2( 1, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="foreground"]

texture = ExtResource( 3 )
centered = false

[node name="to_space" type="TextureButton" parent="foreground"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2068.0
margin/top = 31.0
margin/right = 2196.0
margin/bottom = 159.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0
script/script = ExtResource( 5 )
HOVER = true

[node name="to_control" type="TextureButton" parent="foreground"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2255.0
margin/top = 342.0
margin/right = 2383.0
margin/bottom = 470.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0
script/script = ExtResource( 5 )
HOVER = true


